Brick to GCP DataLab

--- a/notebooks/1.1_RDD-Basics.ipynb
+++ b/notebooks/1.1_RDD-Basics.ipynb
@@ -25,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -61,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -121,35 +125,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# save the RDD to a text file\n",
     "\n",
-    "textRDD.saveAsTextFile('output/sample.txt')"
+    "textRDD.saveAsTextFile('gs://graphenoxidexyz/demo/data/output/sample.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 24\n",
-      "-rw-r--r--  1 szu004  staff     0B 10 Jul 10:45 _SUCCESS\n",
-      "-rw-r--r--  1 szu004  staff     0B 10 Jul 10:45 part-00000\n",
-      "-rw-r--r--  1 szu004  staff    34B 10 Jul 10:45 part-00001\n",
-      "-rw-r--r--  1 szu004  staff    16B 10 Jul 10:45 part-00002\n",
-      "-rw-r--r--  1 szu004  staff    12B 10 Jul 10:45 part-00003\n",
       "\n",
       "Content:\n",
       "The numbers: 10 20 30 are chosen.\n",
       "hello 11 there.\n",
       "it's 12 pm.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Copying gs://graphenoxidexyz/demo/data/output/sample.txt/_SUCCESS...\n",
+      "Copying gs://graphenoxidexyz/demo/data/output/sample.txt/part-00000...\n",
+      "Copying gs://graphenoxidexyz/demo/data/output/sample.txt/part-00002...\n",
+      "/ [0/5 files][    0.0 B/   62.0 B]   0% Done                                    \r",
+      "/ [0/5 files][    0.0 B/   62.0 B]   0% Done                                    \r",
+      "/ [0/5 files][    0.0 B/   62.0 B]   0% Done                                    \r",
+      "/ [1/5 files][    0.0 B/   62.0 B]   0% Done                                    \r",
+      "Copying gs://graphenoxidexyz/demo/data/output/sample.txt/part-00001...\n",
+      "/ [1/5 files][    0.0 B/   62.0 B]   0% Done                                    \r",
+      "/ [2/5 files][   12.0 B/   62.0 B]  19% Done                                    \r",
+      "/ [3/5 files][   46.0 B/   62.0 B]  74% Done                                    \r",
+      "/ [4/5 files][   62.0 B/   62.0 B]  99% Done                                    \r"
      ]
     }
    ],
@@ -158,7 +178,8 @@
     "\n",
     "# Let's preview the results.\n",
     "\n",
-    "ls -lh output/sample.txt\n",
+    "gsutil -m cp -r gs://graphenoxidexyz/demo/data/output/sample.txt .\n",
+    "# ls -lh sample.txt\n",
     "\n",
     "\n",
     "# The output is a directory with the actual content partitioned amongst multiple `part-*` files.\n",
@@ -171,7 +192,7 @@
     "\n",
     "echo \n",
     "echo \"Content:\"\n",
-    "cat output/sample.txt/part-*"
+    "cat sample.txt/part-*"
    ]
   },
   {
@@ -201,8 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -210,7 +233,7 @@
        "['The numbers: 10 20 30 are chosen.', 'hello 11 there.', \"it's 12 pm.\"]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,16 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PythonRDD[10] at RDD at PythonRDD.scala:48"
+       "PythonRDD[12] at RDD at PythonRDD.scala:48"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,8 +293,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -289,7 +316,7 @@
        " 'pm.']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,8 +329,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -311,7 +340,7 @@
        "['10', '20', '30', '11', '12']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,8 +365,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -345,7 +376,7 @@
        "[10, 20, 30, 11, 12]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,8 +392,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -370,7 +403,7 @@
        "83"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,13 +435,22 @@
     "\n",
     "When you are done and you are running off the local machine remember to *close the notebook* with `File/Close and Halt`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "pyspark"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -420,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
