--- a/notebooks/1.3_RDD_Text-Processing.ipynb
+++ b/notebooks/1.3_RDD_Text-Processing.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -48,16 +50,27 @@
       "Copyright statement:\n",
       "The Internet Classics Archive by Daniel C. Stevenson, Web Atomics.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Copying gs://graphenoxidexyz/demo/data/artwar.1b.txt...\n",
+      "/ [0 files][    0.0 B/ 61.9 KiB]                                                \r",
+      "/ [1 files][ 61.9 KiB/ 61.9 KiB]                                                \r\n",
+      "Operation completed over 1 objects/61.9 KiB.                                     \n"
+     ]
     }
    ],
    "source": [
     "%%sh\n",
-    "\n",
+    "gsutil cp gs://graphenoxidexyz/demo/data/artwar.1b.txt .\n",
+    "    \n",
     "echo \"BEGINNING:\"\n",
-    "head -n 22 'data/artwar.1b.txt' | tail -n 10\n",
+    "head -n 22 'artwar.1b.txt' | tail -n 10\n",
     "echo \n",
     "echo \"ENDING:\"\n",
-    "tail -n 20 'data/artwar.1b.txt' | head -n 12"
+    "tail -n 20 'artwar.1b.txt' | head -n 12"
    ]
   },
   {
@@ -80,8 +93,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -116,7 +131,7 @@
     "\n",
     "\n",
     "# create an RDD with the lines of the text\n",
-    "aowTextRDD = sc.textFile('data/artwar.1b.txt')\n",
+    "aowTextRDD = sc.textFile('gs://graphenoxidexyz/demo/data/artwar.1b.txt')\n",
     "\n",
     "# number each line using `zipWithIndex`\n",
     "# and select the heading lines togehter with their indexes\n",
@@ -129,8 +144,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -167,8 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -180,7 +199,7 @@
        " (0, u'3. The art of war, then, is governed by five constant factors, to')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,8 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -246,8 +267,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -298,8 +321,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -316,7 +341,7 @@
        " (u'that', 13)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,8 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -346,7 +373,7 @@
        " (u'aides', 2.5649493574615367)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,8 +389,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# find the top 10 words  by IF-IDF in each chapter\n",
@@ -382,27 +411,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Top TD-IDF words by chapter:\n",
-      "I. Laying Plans: calculations counsel moral law seem deliberations determine believe seeking hearkens\n",
-      "II. Waging War: chariots substance thousand wagons people's ardor spent twenty damped tenths\n",
-      "III. Attack by Stratagem: bulwark win cities ignorant entire next besiege months walled destroy\n",
-      "IV. Tactical Dispositions: estimation quantity measurement balancing defeating defeat sign fighter skilled mistakes\n",
-      "V. Energy: energy indirect yet postulates decision combination effected combined simulated direct\n",
-      "VI. Weak Points and Strong: weaken strengthen van water left rear what places hasten succor\n",
-      "VII. Maneuvering: maneuvering lost drums goal banners fall art deviation refrain alone\n",
-      "VIII. Variation in Tactics: leads dangerous faults roads trouble schemes sensitive varying solicitude affect\n",
-      "IX. The Army on the March: get places river dust sent advancing about grass sign shows\n",
-      "X. Terrain: result six gone towards halfway responsible garrisoned unaware regard ground\n",
-      "XI. The Nine Situations: ground would i facile intersecting serious they desperate dispersive contentious\n",
-      "XII. The Attack by Fire: fire burn days season aid stay developments special proper wind\n",
-      "XIII. The Use of Spies: spies spy converted doomed surviving purposes information inward subtle was\n"
+      "I. Laying Plans: calculations counsel law moral believe seeking hearkens seem deliberations determine\n",
+      "II. Waging War: those long such have second ten fate kept flags captured\n",
+      "III. Attack by Stratagem: bulwark win cities entire next besiege months walled ignorant destroy\n",
+      "IV. Tactical Dispositions: victory conquer thousand secret old power success forth empire afterwards\n",
+      "V. Energy: energy indirect yet combined simulated postulates decision combination effected direct\n",
+      "VI. Weak Points and Strong: enemy's attack victory while skillful how cannot ground field do\n",
+      "VII. Maneuvering: maneuvering goal lost drums banners fall art calm keen gongs\n",
+      "VIII. Variation in Tactics: which art desperate practical fail misfortune handle rush together difficult\n",
+      "IX. The Army on the March: get river places grass dust sent advancing about sign shows\n",
+      "X. Terrain: attack them are these fail unto inferior ways bait ten\n",
+      "XI. The Nine Situations: ground would i serious intersecting facile they desperate dispersive contentious\n",
+      "XII. The Attack by Fire: where camp forward known deliver merely fate second ways available\n",
+      "XIII. The Use of Spies: spies spy converted inward information purposes subtle doomed surviving was\n"
      ]
     }
    ],
@@ -427,9 +458,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "pyspark"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -441,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
