--- a/notebooks/2.1_StructuredData-Introduction.ipynb
+++ b/notebooks/2.1_StructuredData-Introduction.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -85,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -130,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -147,56 +153,6 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>jonh</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Very nice</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-01-02</td>\n",
-       "      <td>1</td>\n",
-       "      <td>karl</td>\n",
-       "      <td>3</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-01-02</td>\n",
-       "      <td>1</td>\n",
-       "      <td>adam</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Super</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-01-03</td>\n",
-       "      <td>2</td>\n",
-       "      <td>greg</td>\n",
-       "      <td>3</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "DataFrame[date: string, product_id: bigint, user_id: string, rating: int, text: string]"
       ]
@@ -235,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -255,8 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -303,11 +263,15 @@
        "</div>"
       ],
       "text/plain": [
-       "DataFrame[date: string, product_id: bigint, user_id: string, rating: int, text: string]"
+       "         date  product_id user_id  rating       text\n",
+       "0  2017-01-02           1    karl       3       None\n",
+       "1  2017-01-01           1    jonh       4  Very nice\n",
+       "2  2017-01-02           1    adam       5      Super"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -317,13 +281,15 @@
     "# As was the case with RDDs the transformations are `lazy`.\n",
     "\n",
     "filteredDF = reviewsDF.filter(reviewsDF.product_id == 1).sort(reviewsDF.rating)\n",
-    "display(filteredDF)"
+    "filteredDF.toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -354,11 +320,13 @@
        "</div>"
       ],
       "text/plain": [
-       "DataFrame[date: string, product_id: bigint, user_id: string, rating: int, text: string]"
+       "         date  product_id user_id  rating       text\n",
+       "0  2017-01-01           1    jonh       4  Very nice"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -372,13 +340,15 @@
     "# with the colum name (as below) or by referring to its DataFrame (above)\n",
     "\n",
     "filteredDF = reviewsDF.filter((col('product_id') == 1) & (col('user_id') == 'jonh'))\n",
-    "display(filteredDF)"
+    "filteredDF.toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -423,11 +393,16 @@
        "</div>"
       ],
       "text/plain": [
-       "DataFrame[product_id: bigint, user_id: string, logRating: double]"
+       "   product_id user_id  logRating\n",
+       "0           1    adam   1.609438\n",
+       "1           1    jonh   1.386294\n",
+       "2           1    karl   1.098612\n",
+       "3           2    greg   1.098612"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -441,13 +416,15 @@
     "selectedDF = reviewsDF \\\n",
     "    .select(col('product_id'), col('user_id'), log(col('rating')).alias('logRating')) \\\n",
     "    .sort(desc('logRating'))\n",
-    "display(selectedDF)"
+    "selectedDF.toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -477,11 +454,14 @@
        "</div>"
       ],
       "text/plain": [
-       "DataFrame[product_id: bigint, avg(rating): double]"
+       "   product_id  avg(rating)\n",
+       "0           1          4.0\n",
+       "1           2          3.0"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -489,13 +469,15 @@
     "# for example the average `rating` for each `product_id`:\n",
     "\n",
     "grouppedDF = reviewsDF.groupBy(col('product_id')).avg('rating')\n",
-    "display(grouppedDF)"
+    "grouppedDF.toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -518,6 +500,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2017-01-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>adam</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Super</td>\n",
+       "      <td>1</td>\n",
+       "      <td>iPhone 6</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>2017-01-01</td>\n",
        "      <td>1</td>\n",
        "      <td>jonh</td>\n",
@@ -528,23 +521,12 @@
        "      <td>1000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>2017-01-02</td>\n",
        "      <td>1</td>\n",
        "      <td>karl</td>\n",
        "      <td>3</td>\n",
        "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "      <td>iPhone 6</td>\n",
-       "      <td>1000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-01-02</td>\n",
-       "      <td>1</td>\n",
-       "      <td>adam</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Super</td>\n",
        "      <td>1</td>\n",
        "      <td>iPhone 6</td>\n",
        "      <td>1000.0</td>\n",
@@ -576,11 +558,24 @@
        "</div>"
       ],
       "text/plain": [
-       "DataFrame[date: string, product_id: bigint, user_id: string, rating: int, text: string, id: bigint, name: string, price: double]"
+       "         date  product_id user_id  rating       text  id            name  \\\n",
+       "0  2017-01-02           1    adam       5      Super   1        iPhone 6   \n",
+       "1  2017-01-01           1    jonh       4  Very nice   1        iPhone 6   \n",
+       "2  2017-01-02           1    karl       3       None   1        iPhone 6   \n",
+       "3  2017-01-03           2    greg       3       None   2        iPhone 7   \n",
+       "4  2017-01-03           2    greg       3       None   2  Samsung Galaxy   \n",
+       "\n",
+       "    price  \n",
+       "0  1000.0  \n",
+       "1  1000.0  \n",
+       "2  1000.0  \n",
+       "3  1200.0  \n",
+       "4   900.0  "
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -588,13 +583,15 @@
     "# (here the `product_id`)\n",
     "\n",
     "reviewsWithItemsDF = reviewsDF.join(itemsDF,  itemsDF.id == reviewsDF.product_id)\n",
-    "display(reviewsWithItemsDF)"
+    "reviewsWithItemsDF.toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -616,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -625,7 +622,7 @@
     "# Finally we can save a `DataFrame` in one of the supported formats, \n",
     "# for example `csv`\n",
     "\n",
-    "reviewsDF.write.csv('output/reviews.csv', mode='overwrite')"
+    "reviewsDF.write.csv('gs://graphenoxidexyz/demo/data/output/reviews.csv', mode='overwrite')"
    ]
   },
   {
@@ -637,19 +634,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 32\n",
-      "-rw-r--r--  1 szu004  staff   0 10 Jul 16:25 _SUCCESS\n",
-      "-rw-r--r--  1 szu004  staff  30 10 Jul 16:25 part-00000-17ad680f-9ea3-4e5b-9147-fcea196092af.csv\n",
-      "-rw-r--r--  1 szu004  staff  21 10 Jul 16:25 part-00001-17ad680f-9ea3-4e5b-9147-fcea196092af.csv\n",
-      "-rw-r--r--  1 szu004  staff  26 10 Jul 16:25 part-00002-17ad680f-9ea3-4e5b-9147-fcea196092af.csv\n",
-      "-rw-r--r--  1 szu004  staff  21 10 Jul 16:25 part-00003-17ad680f-9ea3-4e5b-9147-fcea196092af.csv\n",
+      "total 8\n",
+      "-rw-r--r-- 1 root root 51 Aug 29 07:48 part-00000-98d5dbbe-e1b3-49c1-be0e-d81a8fb12e78-c000.csv\n",
+      "-rw-r--r-- 1 root root 47 Aug 29 07:48 part-00001-98d5dbbe-e1b3-49c1-be0e-d81a8fb12e78-c000.csv\n",
+      "-rw-r--r-- 1 root root  0 Aug 29 07:48 _SUCCESS\n",
       "\n",
       "Content:\n",
       "2017-01-01,1,jonh,4,Very nice\n",
@@ -657,17 +654,32 @@
       "2017-01-02,1,adam,5,Super\n",
       "2017-01-03,2,greg,3,\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Copying gs://graphenoxidexyz/demo/data/output/reviews.csv/part-00000-98d5dbbe-e1b3-49c1-be0e-d81a8fb12e78-c000.csv...\n",
+      "Copying gs://graphenoxidexyz/demo/data/output/reviews.csv/_SUCCESS...\n",
+      "Copying gs://graphenoxidexyz/demo/data/output/reviews.csv/part-00001-98d5dbbe-e1b3-49c1-be0e-d81a8fb12e78-c000.csv...\n",
+      "/ [0/4 files][    0.0 B/   98.0 B]   0% Done                                    \r",
+      "/ [0/4 files][    0.0 B/   98.0 B]   0% Done                                    \r",
+      "/ [0/4 files][    0.0 B/   98.0 B]   0% Done                                    \r",
+      "/ [1/4 files][    0.0 B/   98.0 B]   0% Done                                    \r",
+      "/ [2/4 files][   47.0 B/   98.0 B]  47% Done                                    \r",
+      "/ [3/4 files][   98.0 B/   98.0 B]  99% Done                                    \r"
+     ]
     }
    ],
    "source": [
     "%%sh\n",
-    "\n",
-    "ls -l output/reviews.csv\n",
+    "gsutil -m cp -r gs://graphenoxidexyz/demo/data/output/reviews.csv .\n",
+    "ls -l reviews.csv\n",
     "\n",
     "echo\n",
     "echo \"Content:\"\n",
     "\n",
-    "cat output/reviews.csv/*.csv"
+    "cat reviews.csv/*.csv"
    ]
   },
   {
@@ -687,9 +699,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "pyspark"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -701,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
